Fix styling/alignment of hardcoded icons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,3 +50,10 @@
     font-size: 1.2em;
   }
 }
+
+/* Font Awesome SVG styling */
+.svg-inline--fa {
+  height: 1em;
+  display: inline-block;
+  vertical-align: -.125em;
+}
